domibusConnectorClient/domibusConnectorClientApplication/domibusConnectorClientContainer/src/main/jkube/dpl-env01-connector-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-env01-connector-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env01-connector-client
  template:
    metadata:
      labels:
        app: env01-connector-client
        pod.cp.cna.at/ingress: allow
    spec:
      volumes:
        - name: ecx-keystores
          configMap:
            name: ecx-keystores
            defaultMode: 420
        - name: temp
          emptyDir: {}
        - name: storage
          persistentVolumeClaim:
            claimName: env01-connector-client-pvc
      containers:
        - name: env01-connector-client
          image: centralrepo.apps.a3.cp.cna.at/brz-ju-images-poc-docker/jueu/dc-connector-client:latest
          # image: default-route-openshift-image-registry.apps.a2.cp.cna.at/ju-eu-ejustice-eqs/dc-connector-client
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            request:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - name: storage
              mountPath: /app/data
              subPath: env01/connector-client
            # - name: ecx-keystores
            #   mountPath: /app/config/keystores
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
    resources:
      limits:
        cpu: 200m
        memory: 1Gi
      request:
        cpu: 50m
        memory: 256Mi 
  revisionHistoryLimit: 10
